fixed icon highlight issue and system-monitor spacing

--- a/src/components/programs/system-monitor/system-monitor.component.scss
+++ b/src/components/programs/system-monitor/system-monitor.component.scss
@@ -21,17 +21,27 @@
       border-style: inset;
       border-color: #3b3b3b #e7e7e7 #e7e7e7 #3b3b3b;
 
+      .open-programs {
+        margin-bottom: 8px;
+      }
+
       figcaption {
         text-decoration: underline;
         font-size: 18px;
         font-weight: bold;
+        margin-bottom: 2px;
       }
 
       ul {
         padding-left: 0;
 
+        &:not(:last-child) {
+          margin-bottom: 8px;
+        }
+
         li {
           list-style-type: none;
+
         }
       }
     }
